<resources>
  <string name="app_name">jTenun</string>
  <string name="action_settings">Settings</string>
  <string name="action_search">Settings</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="splash_text">jTenun</string>
  <string name="navigation_item_1">Home</string>
  <string name="navigation_item_2">Events</string>
  <string name="starred_string">Starred</string>
  <string name="beranda_string">Beranda</string>
  <string name="kategori_string">Kategori</string>
  <string name="daerah_string">Daerah</string>
  <string name="warna_string">Warna</string>
  <string name="kegunaan_string">Kegunaan</string>
  <string name="pattern_string">Corak</string>
  <string name="Filosofi_string">Filosofi </string>
  <string name="subheader">Subheader</string>
  <string name="trash_string">Trash</string>
  <string name="all_mail_string">All mails</string>
  <string name="spam_string">Spams</string>
  <string name="closeDrawer">Navigation View</string>
  <string name="openDrawer">Navigation View Closed</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="popuptext">Selamat datang di aplikasi mobile jTenun</string>
  <string name="daftartenun">Daftar Tenun</string>
  <string name="color_palette">Color Palette</string>
  <string name="filosofi_title">FILOSOFI</string>
  <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae metus nec sapien elementum interdum ac mollis tortor. Nunc porttitor metus placerat orci auctor, sed dictum magna dapibus. Morbi a lacus ante. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin posuere nisl imperdiet lectus elementum accumsan. Etiam lacinia nisi ut nulla fermentum tempus. Integer ornare lacinia diam non maximus. Vestibulum iaculis urna eu elementum scelerisque. Etiam nisl erat, bibendum vitae magna nec, convallis malesuada erat. Cras non porttitor nibh. Pellentesque rhoncus sem luctus felis tincidunt bibendum. Pellentesque vulputate eros at nulla sollicitudin volutpat. Pellentesque laoreet est sit amet erat laoreet, id molestie nulla efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed varius nisl at imperdiet facilisis.</string>

  <!--<daftar tenun>-->
  <string name="sasirangan_string">Sasirangan</string>
  <string name="ulos_string">Ulos</string>
  <string name="sarungbugis_string">Sarang Bugis</string>
  <string name="lurik_string">Lurik</string>
  <string name="songketlombok_string">Songket Lombok</string>
  <string name="tapis_string">Tapis</string>
  <string name="gringsing_string">Gringsing</string>
  <string name="tenundayak_string">Tenun Dayak</string>
  <string name="besurek_string">Besurek</string>
  <string name="songketpalembang_string">Songket Palembang</string>
  <string name="tenunulapdoyo_string">Tenun Ulap Doyo</string>
  <string name="poleng_string">Poleng</string>
  <string name="jumputan_string">Jumputan</string>

  <!-- Kegunaan Tenun-->
  <string-array name="kegunaan">
    <item>Acara Berduka</item>
    <item>Pesta</item>
    <item>Pernikahan</item>
    <item>Upacara Adat</item>
    <item>Busana/Pakaian</item>
  </string-array>

  <string-array name="daerah">
    <item>Nanggro Aceh Darussalam</item>
    <item>Sumatera Utara</item>
    <item>Sumatera Barat</item>
    <item>Riau</item>
    <item>Kepulauan Riau</item>
    <item>Jambi</item>
    <item>Sumatera Selatan</item>
    <item>Bangka Belitung</item>
    <item>Lampung</item>
    <item>Bengkulu</item>
    <item>DKI Jakarta</item>
    <item>Jawa Barat</item>
    <item>Banten</item>
    <item>Jawa Tengah</item>
    <item>Yogyakarta</item>
    <item>Jawa Timur</item>
    <item>Bali</item>
    <item>NTT</item>
    <item>NTB</item>
    <item>Kalimantan Barat</item>
    <item>Kalmantan Tengah</item>
    <item>Kalimantan Selatan</item>
    <item>Kalmantan Timur</item>
    <item>Kalmantan Utara</item>
    <item>Sulawesi Utara</item>
    <item>Sulawesi Selatan</item>
    <item>Sulawesi Tenggara</item>
    <item>Sulawesi Barat</item>
    <item>Sulawesi Tengah</item>
    <item>Gorontalo</item>
    <item>Maluku</item>
    <item>Maluku Utara</item>
    <item>Papua Barat</item>
    <item>Papua</item>

  </string-array>

</resources>
