<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/beranda"
            android:checked="false"
            android:icon="@drawable/ic_home_yell"
            android:title="@string/beranda_string" />

        <item
            android:id="@+id/filosofi"
            android:checked="false"
            android:icon="@drawable/ic_star_black"
            android:title="@string/Filosofi_string" />
        <!--<item-->
        <!--android:id="@+id/spam"-->
        <!--android:checked="false"-->
        <!--android:icon="@drawable/ic_error_black"-->
        <!--android:title="@string/spam_string" />-->


        <item
            android:id="@+id/kategori"
            android:icon="@drawable/ic_categories"
            android:title="@string/kategori_string">
        </item>
    </group>
</menu>